--- a/gestioneitorv1_0/WebContent/WEB-INF/web.xml
+++ b/gestioneitorv1_0/WebContent/WEB-INF/web.xml
@@ -11,6 +11,7 @@
 
 	<display-name>gestioneitorv1_0</display-name>
 	<welcome-file-list>
+		<welcome-file>faces/index.xhtml</welcome-file>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
