--- a/gestioneitorv1_0/.classpath
+++ b/gestioneitorv1_0/.classpath
@@ -13,5 +13,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hsqldb.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
